# final-project-llm-cohort

./: .gitignore  CLAUDE.md  README.md
backend/: eval_results.json  pyproject.toml  run_eval_standalone.py
backend/app/: inference.py  main.py  memory.py  parser.py  prompts.py  validator.py
backend/checkpoints/: .gitignore
backend/checkpoints/tacollm-lora-v1/checkpoint-293/: trainer_state.json
backend/checkpoints/tacollm-lora-v1/checkpoint-587/: adapter_config.json  trainer_state.json
backend/checkpoints/tacollm-lora-v1/checkpoint-879/: trainer_state.json
backend/evaluation/: compare_models.py  metrics.py  run_eval.py
backend/tests/: test_compare_models.py  test_dataset_validator.py  test_format_data.py  test_generate_dataset.py  test_memory.py  test_metrics.py  test_parser.py  test_prompt_templates.py  test_run_eval.py  test_validator.py
backend/training/: dataset_validator.py  format_data.py  generate_dataset.py  prompt_templates.py  requirements.txt  sagemaker_job.py  train_lora.py
data/: .gitignore
docs/: api.md  architecture.md  deployment.md  evaluation.md
docs/adr/: 001-tacollm-architecture-decisions.md
docs/superpowers/plans/: 2026-04-15-backend-foundation.md  2026-04-15-dataset-generation.md  2026-04-16-lora-training.md  2026-04-17-evaluation-pipeline.md  2026-04-18-deployment-docs.md  2026-04-18-frontend.md
docs/superpowers/specs/: 2026-04-18-frontend-design.md
frontend/: app.py  client.py  pyproject.toml
frontend/tests/: test_app.py  test_client.py
