[project]
name = "tacollm-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "transformers>=4.41.0",
    "peft>=0.11.0",
    "torch>=2.3.0",
    "accelerate>=0.30.0",
    "boto3>=1.34.0",
    "sagemaker>=2.220.0,<3.0.0",
    "anthropic>=0.28.0",
    "trl>=0.7.0",
    "datasets>=2.16.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov=evaluation --cov-report=term-missing"
