[project]
name = "tacollm-frontend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "gradio>=4.0.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=client --cov=app --cov-report=term-missing"
